@startuml

title __EMOJI's Class Diagram__\n

  namespace com.qiniu.bzui.emoji {
    class com.qiniu.bzui.emoji.EmojiBoard {
        {static} - COLUMN : int
        {static} - ROW : int
        {static} - TAG : String
        - viewPager : ViewPager
        + EmojiBoard()
        + dip2px()
        + setItemClickListener()
        - getPageSize()
    }
  }
  

  namespace com.qiniu.bzui.emoji {
    class com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter {
        - viewContainer : ArrayList<View>
        + EmojiPageAdapter()
        + destroyItem()
        + getCount()
        + instantiateItem()
        + isViewFromObject()
    }
  }
  

  namespace com.qiniu.bzui.emoji {
    class com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter.EmojiGridAdapter {
        ~ resList : List<Integer>
        + getCount()
        + getItem()
        + getItemId()
        + getView()
        + setResList()
    }
  }
  

  namespace com.qiniu.bzui.emoji {
    class com.qiniu.bzui.emoji.EmojiBoard.Indicator {
        - imageList : ArrayList<ImageView>
        - rootView : ViewGroup
        + Indicator()
        + setSelected()
    }
  }
  

  namespace com.qiniu.bzui.emoji {
    interface com.qiniu.bzui.emoji.EmojiBoard.OnEmojiItemClickListener {
        {abstract} + onClick()
    }
  }
  

  namespace com.qiniu.bzui.emoji {
    class com.qiniu.bzui.emoji.EmojiManager {
        - TAG : String
        - emojiCodeList : ArrayList<Integer>
        {static} - emojiManager : EmojiManager
        - emojiResourceList : ArrayList<Integer>
        - gContext : Context
        + getCode()
        {static} + getInstance()
        + getResourceList()
        + getSize()
        + parse()
        - EmojiManager()
        - getResourceByCode()
    }
  }
  

  namespace com.qiniu.bzui.emoji {
    class com.qiniu.bzui.emoji.EmojiManager.CenterImageSpan {
        + CenterImageSpan()
        + draw()
    }
  }
  

  com.qiniu.bzui.emoji.EmojiBoard -up-|> android.widget.LinearLayout
  com.qiniu.bzui.emoji.EmojiBoard o-- com.qiniu.bzui.emoji.EmojiBoard.Indicator : indicator
  com.qiniu.bzui.emoji.EmojiBoard o-- com.qiniu.bzui.emoji.EmojiBoard.OnEmojiItemClickListener : listener
  com.qiniu.bzui.emoji.EmojiBoard +-down- com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter
  com.qiniu.bzui.emoji.EmojiBoard +-down- com.qiniu.bzui.emoji.EmojiBoard.Indicator
  com.qiniu.bzui.emoji.EmojiBoard +-down- com.qiniu.bzui.emoji.EmojiBoard.OnEmojiItemClickListener
  com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter -up-|> androidx.viewpager.widget.PagerAdapter
  com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter +-down- com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter.EmojiGridAdapter
  com.qiniu.bzui.emoji.EmojiBoard.EmojiPageAdapter.EmojiGridAdapter -up-|> android.widget.BaseAdapter
  com.qiniu.bzui.emoji.EmojiManager +-down- com.qiniu.bzui.emoji.EmojiManager.CenterImageSpan
  com.qiniu.bzui.emoji.EmojiManager.CenterImageSpan -up-|> android.text.style.ImageSpan


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
